Update localization - add Netherland

--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -319,10 +319,10 @@
     <value>Vista</value>
   </data>
   <data name="WIRELESS CARD" xml:space="preserve">
-    <value>Tarjeta Inalámbrica  </value>
+    <value>Tarjeta Inalámbrica</value>
   </data>
   <data name="SETTINGS" xml:space="preserve">
-    <value>Configuracion </value>
+    <value>Configuracion</value>
   </data>
   <data name="PLANT" xml:space="preserve">
     <value>Planta</value>
@@ -868,7 +868,7 @@
     <value>Control De Peso</value>
   </data>
   <data name="BOWL WEIGHT" xml:space="preserve">
-    <value>Peso Del Cuenco </value>
+    <value>Peso Del Cuenco</value>
   </data>
   <data name="BOWL FILLING POSITION" xml:space="preserve">
     <value>Posición De Llenado Del Cuenco</value>
@@ -1183,7 +1183,7 @@
     <value>Seguridad Aguas Arriba no es OK</value>
   </data>
   <data name="MANUAL START REQUIRED" xml:space="preserve">
-    <value>Se Requiere Inicio Manual </value>
+    <value>Se Requiere Inicio Manual</value>
   </data>
   <data name="FAULT" xml:space="preserve">
     <value>Avería</value>
@@ -1204,7 +1204,7 @@
     <value>A La Página</value>
   </data>
   <data name="MINOR FAULT PRESENT" xml:space="preserve">
-    <value>Presente Fallo Menor </value>
+    <value>Presente Fallo Menor</value>
   </data>
   <data name="MOTOR CURRENT BELOW MINIMUM RANGE LIMIT (POSSIBLE CAVITATION)" xml:space="preserve">
     <value>Corriente Del Motor Por Debajo Del Límite De Rango Mínimo (Posible Cavitación)</value>
@@ -1375,8 +1375,7 @@
     <value>(4-20 mA)</value>
   </data>
   <data name="MOTOR MAXIMUM AMPERAGE EXCEEDED (&gt;115% OF NOMINAL AMP FOR 15 SEC)" xml:space="preserve">
-    <value>Superado Amperaje Máximo Del Motor (&gt;115% del amperaje nominal durante 15 segundos)
-</value>
+    <value>Superado Amperaje Máximo Del Motor (&gt;115% del amperaje nominal durante 15 segundos)</value>
   </data>
   <data name="(1=ENABLED)" xml:space="preserve">
     <value>(1=Habilitado)</value>
@@ -1619,7 +1618,7 @@
     <value>Silo Vacio</value>
   </data>
   <data name="STOP MATERIAL" xml:space="preserve">
-    <value>Parar Material </value>
+    <value>Parar Material</value>
   </data>
   <data name="START MATERIAL" xml:space="preserve">
     <value>Iniciar Material</value>
@@ -1652,7 +1651,7 @@
     <value>(Pt100)</value>
   </data>
   <data name="LOW CHEMICAL CONCENTRATION WARNING" xml:space="preserve">
-    <value>Advertencia De Baja Concentración Química </value>
+    <value>Advertencia De Baja Concentración Química</value>
   </data>
   <data name="(1&gt;=MIN)" xml:space="preserve">
     <value>(1&gt;=Mínimo)</value>
@@ -1736,7 +1735,7 @@
     <value>Iniciado</value>
   </data>
   <data name="RUNNING" xml:space="preserve">
-    <value>En ejecucion </value>
+    <value>En ejecucion</value>
   </data>
   <data name="WITH MINOR ALARM" xml:space="preserve">
     <value>Con Alarma Menor</value>
@@ -2018,7 +2017,7 @@
     <value>Ok Para Proceso (Epb Ok)</value>
   </data>
   <data name="PULL-CORD SAFETIES" xml:space="preserve">
-    <value>Cable de Seguridad </value>
+    <value>Cable de Seguridad</value>
   </data>
   <data name="LOCAL DISCONNECT OK   (IF ANY)" xml:space="preserve">
     <value>Desconexión Local Ok (Si Corresponde)</value>
@@ -2036,7 +2035,7 @@
     <value>Esperando Condiciones De Proceso</value>
   </data>
   <data name="WAITING FOR PROCESS CONDITIONS TO START" xml:space="preserve">
-    <value>Esperando A  Condiciones Del Proceso Para Iniciar </value>
+    <value>Esperando A  Condiciones Del Proceso Para Iniciar</value>
   </data>
   <data name="WAITING FOR EVACUATION TIME TO STOP" xml:space="preserve">
     <value>Esperando A Que Termine El Tiempo De Evacuación</value>
@@ -2123,7 +2122,7 @@
     <value>Alarma De Control De La Unidad De Selección</value>
   </data>
   <data name="SORTING UNIT IN LOCAL MODE CONTROL" xml:space="preserve">
-    <value>Unidad De Selección En Modo Control Local </value>
+    <value>Unidad De Selección En Modo Control Local</value>
   </data>
   <data name="SORTING UNIT NOT ON OK" xml:space="preserve">
     <value>Unidad De Selección no funciona</value>
@@ -2723,7 +2722,7 @@
     <value>Velocidad De Desaceleración De Producción</value>
   </data>
   <data name="PUSHER STEP BACK" xml:space="preserve">
-    <value>Retroceso Del Empujador </value>
+    <value>Retroceso Del Empujador</value>
   </data>
   <data name="STOP UPSTREAM IF STEP BACK" xml:space="preserve">
     <value>Detenerse Aguas Arriba Si Se Retrocede</value>
@@ -2744,7 +2743,7 @@
     <value>Restablecer Ciclo: Empujador Completo Hacia Atrás</value>
   </data>
   <data name="HOME" xml:space="preserve">
-    <value>Inicio </value>
+    <value>Inicio</value>
   </data>
   <data name="PUSHER STEP BACK REQUEST" xml:space="preserve">
     <value>Petición De Retroceso Del Empujador</value>
@@ -2768,7 +2767,7 @@
     <value>Comando De Desbloqueo De Llave De Seguridad Off</value>
   </data>
   <data name="SAFETY KEY UNLOCK REQUESTED" xml:space="preserve">
-    <value>Se Requiere Desbloqueo Con Llave De Seguridad </value>
+    <value>Se Requiere Desbloqueo Con Llave De Seguridad</value>
   </data>
   <data name="SAFETY KEY NOT INSERTED ON CABINET" xml:space="preserve">
     <value>Clave De Seguridad No Insertada En ElArmario</value>
@@ -2948,7 +2947,7 @@
     <value>Inversión Del Rotor ( Avance Temporizado)</value>
   </data>
   <data name="PUSHER STEP BACK REQUESTED" xml:space="preserve">
-    <value>Requerido  Retroceso Del Empujador Requerido </value>
+    <value>Requerido  Retroceso Del Empujador Requerido</value>
   </data>
   <data name="ROTOR REVERSE REQUESTED" xml:space="preserve">
     <value>Requerida Inversion Del Rotor</value>
@@ -3014,7 +3013,7 @@
     <value>SYS - Activar relé Estop</value>
   </data>
   <data name="COMMAND ESTOP RESET" xml:space="preserve">
-    <value>Reset Comando Estop </value>
+    <value>Reset Comando Estop</value>
   </data>
   <data name="SYS - ESTOP RELAY RESET" xml:space="preserve">
     <value>SYS - Reinicio Del Relé Estop</value>
@@ -3203,7 +3202,7 @@
     <value>Enfriamiento De Comandos</value>
   </data>
   <data name="COMMAND COOLING FAN" xml:space="preserve">
-    <value>Control Del Ventilador De Enfriamiento </value>
+    <value>Control Del Ventilador De Enfriamiento</value>
   </data>
   <data name="LAMP MOTOR ON" xml:space="preserve">
     <value>Lámpara Motor Encendida</value>
@@ -3275,10 +3274,10 @@
     <value>Activo O En Curso</value>
   </data>
   <data name="OVERLOAD DIGITAL INPUT" xml:space="preserve">
-    <value>Sobrecarga Entrada Digital </value>
+    <value>Sobrecarga Entrada Digital</value>
   </data>
   <data name="OVERLOAD DIGITAL OUTPUT" xml:space="preserve">
-    <value>Sobrecarga Salida Digital </value>
+    <value>Sobrecarga Salida Digital</value>
   </data>
   <data name="OVERLOAD INTERNAL 24V DC" xml:space="preserve">
     <value>Sobrecarga Interna De 24 V Dc</value>
@@ -3380,7 +3379,7 @@
     <value>Aditivo</value>
   </data>
   <data name="FLAKES SORTING" xml:space="preserve">
-    <value>Selección De Escamas </value>
+    <value>Selección De Escamas</value>
   </data>
   <data name="MACHINES EXHAUST" xml:space="preserve">
     <value>Escape De Las Máquinas</value>
@@ -3407,7 +3406,7 @@
     <value>Separación</value>
   </data>
   <data name="DRYING" xml:space="preserve">
-    <value>Secado </value>
+    <value>Secado</value>
   </data>
   <data name="MIX SILO" xml:space="preserve">
     <value>Silo Mezclador</value>
@@ -4217,7 +4216,7 @@
     <value>Compruebe La Posición De La Válvula, Las Señales De Ambos  Final De Carrera De Posición Y La Presión En Las Tuberías</value>
   </data>
   <data name="INFO_LS_4" xml:space="preserve">
-    <value>Compruebe el dispositivo. Se Puede Bloquear Y Controlar Las Señales De Ambos Finales De Carrera De Posición.</value>
+    <value>Compruebe el dispositivo. Se Puede Bloquear Y Controlar Las Señales De Ambos Finales De Carrera De Posición</value>
   </data>
   <data name="INFO_LS_5" xml:space="preserve">
     <value>Abra La Válvula Manual Indicada Instalada En La Máquina</value>
@@ -9633,5 +9632,173 @@
   </data>
   <data name="SYSTEM CONTROL PLC" xml:space="preserve">
     <value>PLC de control del sistema</value>
+  </data>
+  <data name="HOT WASH MODULE" xml:space="preserve">
+    <value>Módulo de lavado en caliente</value>
+  </data>
+  <data name="CHEMICAL DOSING - CAUSTIC SODA PUMP" xml:space="preserve">
+    <value>Dosificación de productos químicos: bomba de sosa cáustica</value>
+  </data>
+  <data name="CHEMICAL DOSING - DETERGENT PUMP" xml:space="preserve">
+    <value>Dosificación de productos químicos: bomba de detergente</value>
+  </data>
+  <data name="CHEMICAL DOSING - FRESH WATER" xml:space="preserve">
+    <value>Dosificación de productos químicos: agua dulce</value>
+  </data>
+  <data name="CHEMICAL DOSING - ANTIFOAM PUMP" xml:space="preserve">
+    <value>Dosificación de químicos - Bomba antiespumante</value>
+  </data>
+  <data name="CHEMICAL DOSING - MANAGER" xml:space="preserve">
+    <value>Dosificación de Químicos - Gerente</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY TIME" xml:space="preserve">
+    <value>Dosificación de productos químicos: ciclo por tiempo</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY WEIGHT" xml:space="preserve">
+    <value>Dosificación de productos químicos: ciclo por peso</value>
+  </data>
+  <data name="MICROFILTER - MAIN MOTOR" xml:space="preserve">
+    <value>Microfiltro - Motor principal</value>
+  </data>
+  <data name="MICROFILTER - CLEANING VALVE" xml:space="preserve">
+    <value>Microfiltro - Válvula de limpieza</value>
+  </data>
+  <data name="MICROFILTER - WATER LEVEL" xml:space="preserve">
+    <value>Microfiltro - Nivel de agua</value>
+  </data>
+  <data name="MICROFILTER - WATER FLOW RATE" xml:space="preserve">
+    <value>Microfiltro - Caudal de agua</value>
+  </data>
+  <data name="MICROFILTER - MANAGER" xml:space="preserve">
+    <value>Microfiltro - Administrador</value>
+  </data>
+  <data name="WATER TANK - PUMP TO REACTORS" xml:space="preserve">
+    <value>Tanque de agua: bomba a reactores</value>
+  </data>
+  <data name="FULL PRODUCTION SPEED" xml:space="preserve">
+    <value>Velocidad de producción total</value>
+  </data>
+  <data name="SPEED WITH DOWNSTREAM PARTIALLY DISABLED" xml:space="preserve">
+    <value>Velocidad con aguas abajo parcialmente deshabilitada</value>
+  </data>
+  <data name="WATER TANK - PUMP TO WCE CLEANING" xml:space="preserve">
+    <value>Tanque de agua: bomba a limpieza del WCE</value>
+  </data>
+  <data name="WATER TANK - PUMP TO MICROFILTER" xml:space="preserve">
+    <value>Tanque de agua: bomba a microfiltro</value>
+  </data>
+  <data name="WATER TANK - AGITATOR" xml:space="preserve">
+    <value>Tanque de agua - Agitador</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER" xml:space="preserve">
+    <value>Tanque de agua - Agua dulce</value>
+  </data>
+  <data name="WATER TANK - WATER DISCHARGE" xml:space="preserve">
+    <value>Tanque de agua - Descarga de agua</value>
+  </data>
+  <data name="WATER TANK - WATER RECIRCULATION" xml:space="preserve">
+    <value>Tanque de agua - Recirculación de agua</value>
+  </data>
+  <data name="WATER TANK - WATER CONDUCTIVITY" xml:space="preserve">
+    <value>Tanque de agua - Conductividad del agua</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER FLOW RATE" xml:space="preserve">
+    <value>Tanque de agua: caudal de agua dulce</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUT TEMP." xml:space="preserve">
+    <value>Intercambiador de calor: temperatura de salida de agua.</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM PRESSURE" xml:space="preserve">
+    <value>Intercambiador de calor - Presión de vapor</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER PRESSURE" xml:space="preserve">
+    <value>Intercambiador de calor - Presión de agua</value>
+  </data>
+  <data name="HOT WASH - AGITATORS" xml:space="preserve">
+    <value>Lavado en Caliente - Agitadores</value>
+  </data>
+  <data name="NO LOWER SPEED" xml:space="preserve">
+    <value>SIN VELOCIDAD MÁS BAJA</value>
+  </data>
+  <data name="LOWER SPEED FOR DOWNSTREAM NOT OK" xml:space="preserve">
+    <value>Velocidad más baja para aguas abajo no está bien</value>
+  </data>
+  <data name="HOT WASH - EXTRACTION" xml:space="preserve">
+    <value>Lavado en caliente - Extracción</value>
+  </data>
+  <data name="END OF RAMP" xml:space="preserve">
+    <value>FINAL DE RAMPA</value>
+  </data>
+  <data name="ACCELERATION IN PROGRESS" xml:space="preserve">
+    <value>Aceleración en progreso</value>
+  </data>
+  <data name="HOT WASH - DISCHARGE PUMP" xml:space="preserve">
+    <value>Lavado en caliente - Bomba de descarga</value>
+  </data>
+  <data name="SUPERWASH DISABLED" xml:space="preserve">
+    <value>SUPERLAVADO DESHABILITADO</value>
+  </data>
+  <data name="M_INFO_SYSTEM_DISABLED_BY_OPERAT" xml:space="preserve">
+    <value>Este sistema ha sido desactivado por el operador. Vaya a Configuración/Configuración de componentes para habilitarlo nuevamente</value>
+  </data>
+  <data name="NO MINIMUM SPEED" xml:space="preserve">
+    <value>SIN VELOCIDAD MÍNIMA</value>
+  </data>
+  <data name="MINIMUM SPEED FOR LOW STIRRER CURRENT" xml:space="preserve">
+    <value>Velocidad mínima para corriente de agitador baja</value>
+  </data>
+  <data name="NOT DISABLED" xml:space="preserve">
+    <value>NO DESACTIVADO</value>
+  </data>
+  <data name="SUPERWASH IS DISABLED" xml:space="preserve">
+    <value>El superlavado está deshabilitado</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE" xml:space="preserve">
+    <value>Lavado en caliente - Carga de agua</value>
+  </data>
+  <data name="HOT WASH - TANK LEVEL" xml:space="preserve">
+    <value>Lavado en caliente - Nivel del tanque</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE FLOW RATE" xml:space="preserve">
+    <value>Lavado en caliente: caudal de carga de agua</value>
+  </data>
+  <data name="SOREMA REQUEST MATERIAL" xml:space="preserve">
+    <value>Sorema Solicitar Material</value>
+  </data>
+  <data name="UPSTREAM READY TO GIVE MATERIAL (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Upstream Listo Para Dar Material (Señal Externa)</value>
+  </data>
+  <data name="SOREMA PLANT STATUS OK" xml:space="preserve">
+    <value>Estado de la planta Sorema OK</value>
+  </data>
+  <data name="(1=SOREMA STATUS OK)" xml:space="preserve">
+    <value>(1=ESTADO DE SOREMA OK)</value>
+  </data>
+  <data name="EXTERNAL PLANT READY" xml:space="preserve">
+    <value>PLANTA EXTERNA LISTA</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT READY TO GIVE MATERIAL" xml:space="preserve">
+    <value>Planta Externa No Está Lista para Dar Material</value>
+  </data>
+  <data name="SOREMA NO FAULTS" xml:space="preserve">
+    <value>Sin alarmas de Sorema</value>
+  </data>
+  <data name="ALARM PRESENT IN SOREMA PLANT" xml:space="preserve">
+    <value>Alarma presente en Planta Sorema</value>
+  </data>
+  <data name="WCE - WATER CLEANING" xml:space="preserve">
+    <value>WCE - Limpieza de agua</value>
+  </data>
+  <data name="DOWNSTREAM READY" xml:space="preserve">
+    <value>Listo para aguas abajo</value>
+  </data>
+  <data name="RECIRCULATION TANK" xml:space="preserve">
+    <value>Tanque de recirculación</value>
+  </data>
+  <data name="RECIRCULATION TANK - MAX LEVEL" xml:space="preserve">
+    <value>Tanque de recirculación - Nivel máximo</value>
+  </data>
+  <data name="WCE WATER CLEANING" xml:space="preserve">
+    <value>Limpieza de agua WCE</value>
   </data>
 </root>
