--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -6562,9 +6562,11 @@
   </data>
   <data name="CHARGING CONVEYOR LEFT LUBRIF." xml:space="preserve">
     <value>Charging Conveyor Left Lubrif.</value>
+    <comment>@MutedRule(PunctuationTail)</comment>
   </data>
   <data name="CHARGING CONVEYOR RIGHT LUBRIF." xml:space="preserve">
     <value>Charging Conveyor Right Lubrif.</value>
+    <comment>@MutedRule(PunctuationTail)</comment>
   </data>
   <data name="CHARGING CONVEYOR LUBRIFICATION" xml:space="preserve">
     <value>Charging Conveyor Lubrification</value>
@@ -6706,9 +6708,11 @@
   </data>
   <data name="BUFFER METAL CONVEYOR LEFT LUBRIF." xml:space="preserve">
     <value>Buffer Metal Conveyor Left Lubrif.</value>
+    <comment>@MutedRule(PunctuationTail)</comment>
   </data>
   <data name="BUFFER METAL CONVEYOR RIGHT LUBRIF." xml:space="preserve">
     <value>Buffer Metal Conveyor Right Lubrif.</value>
+    <comment>@MutedRule(PunctuationTail)</comment>
   </data>
   <data name="BUFFER METAL CONVEYOR HOPPER LEVEL" xml:space="preserve">
     <value>Buffer Metal Conveyor Hopper Level</value>
@@ -9990,5 +9994,174 @@
   </data>
   <data name="SYSTEM CONTROL PLC" xml:space="preserve">
     <value>System Control Plc</value>
+  </data>
+  <data name="HOT WASH MODULE" xml:space="preserve">
+    <value>Hot Wash Module</value>
+  </data>
+  <data name="CHEMICAL DOSING - CAUSTIC SODA PUMP" xml:space="preserve">
+    <value>Chemical Dosing - Caustic Soda Pump</value>
+  </data>
+  <data name="CHEMICAL DOSING - DETERGENT PUMP" xml:space="preserve">
+    <value>Chemical Dosing - Detergent Pump</value>
+  </data>
+  <data name="CHEMICAL DOSING - FRESH WATER" xml:space="preserve">
+    <value>Chemical Dosing - Fresh Water</value>
+  </data>
+  <data name="CHEMICAL DOSING - ANTIFOAM PUMP" xml:space="preserve">
+    <value>Chemical Dosing - Antifoam Pump</value>
+  </data>
+  <data name="CHEMICAL DOSING - MANAGER" xml:space="preserve">
+    <value>Chemical Dosing - Manager</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY TIME" xml:space="preserve">
+    <value>Chemical Dosing - Cycle by Time</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY WEIGHT" xml:space="preserve">
+    <value>Chemical Dosing - Cycle by Weight</value>
+  </data>
+  <data name="MICROFILTER - MAIN MOTOR" xml:space="preserve">
+    <value>Microfilter - Main Motor</value>
+  </data>
+  <data name="MICROFILTER - CLEANING VALVE" xml:space="preserve">
+    <value>Microfilter - Cleaning Valve</value>
+  </data>
+  <data name="MICROFILTER - WATER LEVEL" xml:space="preserve">
+    <value>Microfilter - Water Level</value>
+  </data>
+  <data name="MICROFILTER - WATER FLOW RATE" xml:space="preserve">
+    <value>Microfilter - Water Flow Rate</value>
+  </data>
+  <data name="MICROFILTER - MANAGER" xml:space="preserve">
+    <value>Microfilter - Manager</value>
+  </data>
+  <data name="WATER TANK - PUMP TO REACTORS" xml:space="preserve">
+    <value>Water Tank - Pump To Reactors</value>
+  </data>
+  <data name="FULL PRODUCTION SPEED" xml:space="preserve">
+    <value>Full Production Speed</value>
+  </data>
+  <data name="SPEED WITH DOWNSTREAM PARTIALLY DISABLED" xml:space="preserve">
+    <value>Speed With Downstream Partially Disabled</value>
+  </data>
+  <data name="WATER TANK - PUMP TO WCE CLEANING" xml:space="preserve">
+    <value>Water Tank - Pump To WCE Cleaning</value>
+  </data>
+  <data name="WATER TANK - PUMP TO MICROFILTER" xml:space="preserve">
+    <value>Water Tank - Pump To Microfilter</value>
+  </data>
+  <data name="WATER TANK - AGITATOR" xml:space="preserve">
+    <value>Water Tank - Agitator</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER" xml:space="preserve">
+    <value>Water Tank - Fresh Water</value>
+  </data>
+  <data name="WATER TANK - WATER DISCHARGE" xml:space="preserve">
+    <value>Water Tank - Water Discharge</value>
+  </data>
+  <data name="WATER TANK - WATER RECIRCULATION" xml:space="preserve">
+    <value>Water Tank - Water Recirculation</value>
+  </data>
+  <data name="WATER TANK - WATER CONDUCTIVITY" xml:space="preserve">
+    <value>Water Tank - Water Conductivity</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER FLOW RATE" xml:space="preserve">
+    <value>Water Tank - Fresh Water Flow Rate</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUT TEMP." xml:space="preserve">
+    <value>Heat Exchanger - Water Out Temp.</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM PRESSURE" xml:space="preserve">
+    <value>Heat Exchanger - Steam Pressure</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER PRESSURE" xml:space="preserve">
+    <value>Heat Exchanger - Water Pressure</value>
+  </data>
+  <data name="HOT WASH - AGITATORS" xml:space="preserve">
+    <value>Hot Wash - Agitators</value>
+  </data>
+  <data name="NO LOWER SPEED" xml:space="preserve">
+    <value>NO LOWER SPEED</value>
+  </data>
+  <data name="LOWER SPEED FOR DOWNSTREAM NOT OK" xml:space="preserve">
+    <value>Lower Speed For Downstream Not OK</value>
+  </data>
+  <data name="HOT WASH - EXTRACTION" xml:space="preserve">
+    <value>Hot Wash - Extraction</value>
+  </data>
+  <data name="END OF RAMP" xml:space="preserve">
+    <value>END OF RAMP</value>
+  </data>
+  <data name="ACCELERATION IN PROGRESS" xml:space="preserve">
+    <value>Acceleration In Progress</value>
+  </data>
+  <data name="HOT WASH - DISCHARGE PUMP" xml:space="preserve">
+    <value>Hot Wash - Discharge Pump</value>
+  </data>
+  <data name="SUPERWASH DISABLED" xml:space="preserve">
+    <value>SUPERWASH DISABLED</value>
+  </data>
+  <data name="M_INFO_SYSTEM_DISABLED_BY_OPERAT" xml:space="preserve">
+    <value>This System Has Been Disabled By Operator. Go To Component Setup/Configuration To Enable It Again</value>
+    <comment>InfoText Message</comment>
+  </data>
+  <data name="NO MINIMUM SPEED" xml:space="preserve">
+    <value>NO MINIMUM SPEED</value>
+  </data>
+  <data name="MINIMUM SPEED FOR LOW STIRRER CURRENT" xml:space="preserve">
+    <value>Minimum Speed For Low Stirrer Current</value>
+  </data>
+  <data name="NOT DISABLED" xml:space="preserve">
+    <value>NOT DISABLED</value>
+  </data>
+  <data name="SUPERWASH IS DISABLED" xml:space="preserve">
+    <value>Superwash Is Disabled</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE" xml:space="preserve">
+    <value>Hot Wash - Water Charge</value>
+  </data>
+  <data name="HOT WASH - TANK LEVEL" xml:space="preserve">
+    <value>Hot Wash - Tank Level</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE FLOW RATE" xml:space="preserve">
+    <value>Hot Wash - Water Charge Flow Rate</value>
+  </data>
+  <data name="SOREMA REQUEST MATERIAL" xml:space="preserve">
+    <value>Sorema Request Material</value>
+  </data>
+  <data name="UPSTREAM READY TO GIVE MATERIAL (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>Upstream Ready To Give Material (External Signal)</value>
+  </data>
+  <data name="SOREMA PLANT STATUS OK" xml:space="preserve">
+    <value>Sorema Plant Status OK</value>
+  </data>
+  <data name="(1=SOREMA STATUS OK)" xml:space="preserve">
+    <value>(1=SOREMA STATUS OK)</value>
+  </data>
+  <data name="EXTERNAL PLANT READY" xml:space="preserve">
+    <value>EXTERNAL PLANT READY</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT READY TO GIVE MATERIAL" xml:space="preserve">
+    <value>External Plant is Not Ready to Give Material</value>
+  </data>
+  <data name="SOREMA NO FAULTS" xml:space="preserve">
+    <value>No Sorema Alarms</value>
+  </data>
+  <data name="ALARM PRESENT IN SOREMA PLANT" xml:space="preserve">
+    <value>Alarm Present in Sorema Plant</value>
+  </data>
+  <data name="WCE - WATER CLEANING" xml:space="preserve">
+    <value>WCE - Water Cleaning</value>
+  </data>
+  <data name="DOWNSTREAM READY" xml:space="preserve">
+    <value>Downstream Ready</value>
+  </data>
+  <data name="RECIRCULATION TANK" xml:space="preserve">
+    <value>Recirculation Tank</value>
+  </data>
+  <data name="RECIRCULATION TANK - MAX LEVEL" xml:space="preserve">
+    <value>Recirculation Tank - Max Level</value>
+  </data>
+  <data name="WCE WATER CLEANING" xml:space="preserve">
+    <value>WCE Water Cleaning</value>
   </data>
 </root>
