--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -2974,7 +2974,7 @@
     <value>SYS - Sovraccarico Del Sistema Di Raffreddamento Del Quadro</value>
   </data>
   <data name="COOLING SYSTEM HEALTY" xml:space="preserve">
-    <value>Stato ok del Sistema Di Raffreddamento </value>
+    <value>Stato ok del Sistema Di Raffreddamento</value>
   </data>
   <data name="SYS - AIR CONDITIONING UNIT STATUS" xml:space="preserve">
     <value>SYS - Stato Dell'Unità Di Condizionamento Dell'Aria</value>
@@ -9632,5 +9632,173 @@
   </data>
   <data name="SYSTEM CONTROL PLC" xml:space="preserve">
     <value>Plc di controllo del sistema</value>
+  </data>
+  <data name="HOT WASH MODULE" xml:space="preserve">
+    <value>Modulo di lavaggio a caldo</value>
+  </data>
+  <data name="CHEMICAL DOSING - CAUSTIC SODA PUMP" xml:space="preserve">
+    <value>Dosaggio chimico - Pompa per soda caustica</value>
+  </data>
+  <data name="CHEMICAL DOSING - DETERGENT PUMP" xml:space="preserve">
+    <value>Dosaggio chimico - Pompa detergente</value>
+  </data>
+  <data name="CHEMICAL DOSING - FRESH WATER" xml:space="preserve">
+    <value>Dosaggio chimico - Acqua dolce</value>
+  </data>
+  <data name="CHEMICAL DOSING - ANTIFOAM PUMP" xml:space="preserve">
+    <value>Dosaggio chimico - Pompa antischiuma</value>
+  </data>
+  <data name="CHEMICAL DOSING - MANAGER" xml:space="preserve">
+    <value>Dosaggio chimico - Responsabile</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY TIME" xml:space="preserve">
+    <value>Dosaggio chimico - Ciclo in base al tempo</value>
+  </data>
+  <data name="CHEMICAL DOSING - CYCLE BY WEIGHT" xml:space="preserve">
+    <value>Dosaggio chimico - Ciclo in base al peso</value>
+  </data>
+  <data name="MICROFILTER - MAIN MOTOR" xml:space="preserve">
+    <value>Microfiltro - Motore principale</value>
+  </data>
+  <data name="MICROFILTER - CLEANING VALVE" xml:space="preserve">
+    <value>Microfiltro - Valvola di pulizia</value>
+  </data>
+  <data name="MICROFILTER - WATER LEVEL" xml:space="preserve">
+    <value>Microfiltro - Livello dell'acqua</value>
+  </data>
+  <data name="MICROFILTER - WATER FLOW RATE" xml:space="preserve">
+    <value>Microfiltro - Portata Acqua</value>
+  </data>
+  <data name="MICROFILTER - MANAGER" xml:space="preserve">
+    <value>Microfiltro - Gestore</value>
+  </data>
+  <data name="WATER TANK - PUMP TO REACTORS" xml:space="preserve">
+    <value>Serbatoio dell'acqua - Pompa ai reattori</value>
+  </data>
+  <data name="FULL PRODUCTION SPEED" xml:space="preserve">
+    <value>Piena velocità di produzione</value>
+  </data>
+  <data name="SPEED WITH DOWNSTREAM PARTIALLY DISABLED" xml:space="preserve">
+    <value>Velocità Con Downstream Parzialmente Disabilitato</value>
+  </data>
+  <data name="WATER TANK - PUMP TO WCE CLEANING" xml:space="preserve">
+    <value>Serbatoio dell'acqua - Pompa per la pulizia del WCE</value>
+  </data>
+  <data name="WATER TANK - PUMP TO MICROFILTER" xml:space="preserve">
+    <value>Serbatoio dell'acqua - Pompa per microfiltro</value>
+  </data>
+  <data name="WATER TANK - AGITATOR" xml:space="preserve">
+    <value>Serbatoio dell'acqua - Agitatore</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER" xml:space="preserve">
+    <value>Serbatoio dell'acqua - Acqua dolce</value>
+  </data>
+  <data name="WATER TANK - WATER DISCHARGE" xml:space="preserve">
+    <value>Serbatoio dell'acqua - Scarico dell'acqua</value>
+  </data>
+  <data name="WATER TANK - WATER RECIRCULATION" xml:space="preserve">
+    <value>Serbatoio dell'acqua - Ricircolo dell'acqua</value>
+  </data>
+  <data name="WATER TANK - WATER CONDUCTIVITY" xml:space="preserve">
+    <value>Serbatoio dell'acqua: conducibilità dell'acqua</value>
+  </data>
+  <data name="WATER TANK - FRESH WATER FLOW RATE" xml:space="preserve">
+    <value>Serbatoio dell'acqua: portata dell'acqua dolce</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER OUT TEMP." xml:space="preserve">
+    <value>Scambiatore di calore - Temp. uscita acqua.</value>
+  </data>
+  <data name="HEAT EXCHANGER - STEAM PRESSURE" xml:space="preserve">
+    <value>Scambiatore di calore - Pressione del vapore</value>
+  </data>
+  <data name="HEAT EXCHANGER - WATER PRESSURE" xml:space="preserve">
+    <value>Scambiatore di calore - Pressione dell'acqua</value>
+  </data>
+  <data name="HOT WASH - AGITATORS" xml:space="preserve">
+    <value>Lavaggio a caldo - Agitatori</value>
+  </data>
+  <data name="NO LOWER SPEED" xml:space="preserve">
+    <value>NESSUNA VELOCITÀ INFERIORE</value>
+  </data>
+  <data name="LOWER SPEED FOR DOWNSTREAM NOT OK" xml:space="preserve">
+    <value>Velocità inferiore per downstream non OK</value>
+  </data>
+  <data name="HOT WASH - EXTRACTION" xml:space="preserve">
+    <value>Lavaggio a caldo - Estrazione</value>
+  </data>
+  <data name="END OF RAMP" xml:space="preserve">
+    <value>FINE RAMPA</value>
+  </data>
+  <data name="ACCELERATION IN PROGRESS" xml:space="preserve">
+    <value>Accelerazione in corso</value>
+  </data>
+  <data name="HOT WASH - DISCHARGE PUMP" xml:space="preserve">
+    <value>Lavaggio a caldo - Pompa di scarico</value>
+  </data>
+  <data name="SUPERWASH DISABLED" xml:space="preserve">
+    <value>SUPERWASH DISABILITATO</value>
+  </data>
+  <data name="M_INFO_SYSTEM_DISABLED_BY_OPERAT" xml:space="preserve">
+    <value>Questo sistema è stato disabilitato dall'operatore. Vai a Impostazione/Configurazione del componente per abilitarlo nuovamente</value>
+  </data>
+  <data name="NO MINIMUM SPEED" xml:space="preserve">
+    <value>NESSUNA VELOCITÀ MINIMA</value>
+  </data>
+  <data name="MINIMUM SPEED FOR LOW STIRRER CURRENT" xml:space="preserve">
+    <value>Velocità minima per corrente dell'agitatore bassa</value>
+  </data>
+  <data name="NOT DISABLED" xml:space="preserve">
+    <value>NON DISABILI</value>
+  </data>
+  <data name="SUPERWASH IS DISABLED" xml:space="preserve">
+    <value>Superwash è disabilitato</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE" xml:space="preserve">
+    <value>Lavaggio a caldo - Carica acqua</value>
+  </data>
+  <data name="HOT WASH - TANK LEVEL" xml:space="preserve">
+    <value>Lavaggio a caldo - Livello vasca</value>
+  </data>
+  <data name="HOT WASH - WATER CHARGE FLOW RATE" xml:space="preserve">
+    <value>Lavaggio a caldo - Portata carico acqua</value>
+  </data>
+  <data name="SOREMA REQUEST MATERIAL" xml:space="preserve">
+    <value>Sorema Richiesta Materiale</value>
+  </data>
+  <data name="UPSTREAM READY TO GIVE MATERIAL (EXTERNAL SIGNAL)" xml:space="preserve">
+    <value>A monte pronto a fornire materiale (segnale esterno)</value>
+  </data>
+  <data name="SOREMA PLANT STATUS OK" xml:space="preserve">
+    <value>Stato Impianto Sorema OK</value>
+  </data>
+  <data name="(1=SOREMA STATUS OK)" xml:space="preserve">
+    <value>(1=STATO SOREMA OK)</value>
+  </data>
+  <data name="EXTERNAL PLANT READY" xml:space="preserve">
+    <value>IMPIANTO ESTERNO PRONTO</value>
+  </data>
+  <data name="EXTERNAL PLANT IS NOT READY TO GIVE MATERIAL" xml:space="preserve">
+    <value>L'impianto esterno non è pronto a fornire materiale</value>
+  </data>
+  <data name="SOREMA NO FAULTS" xml:space="preserve">
+    <value>Nessun allarme Sorema</value>
+  </data>
+  <data name="ALARM PRESENT IN SOREMA PLANT" xml:space="preserve">
+    <value>Allarme Presente nello Stabilimento Sorema</value>
+  </data>
+  <data name="WCE - WATER CLEANING" xml:space="preserve">
+    <value>WCE - Depurazione dell'acqua</value>
+  </data>
+  <data name="DOWNSTREAM READY" xml:space="preserve">
+    <value>Pronto a valle</value>
+  </data>
+  <data name="RECIRCULATION TANK" xml:space="preserve">
+    <value>Serbatoio di ricircolo</value>
+  </data>
+  <data name="RECIRCULATION TANK - MAX LEVEL" xml:space="preserve">
+    <value>Serbatoio di ricircolo - Livello massimo</value>
+  </data>
+  <data name="WCE WATER CLEANING" xml:space="preserve">
+    <value>WCE pulizia dell'acqua</value>
   </data>
 </root>
