PreVu Localization Update

--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -9801,4 +9801,7 @@
   <data name="WCE WATER CLEANING" xml:space="preserve">
     <value>WCE-Wasserreinigung</value>
   </data>
+  <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
+    <value>Der elektrische Leistungsschalter muss für die Produktion geschlossen sein</value>
+  </data>
 </root>
