--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -9801,4 +9801,7 @@
   <data name="WCE WATER CLEANING" xml:space="preserve">
     <value>Limpieza de agua WCE</value>
   </data>
+  <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
+    <value>El disyuntor eléctrico debe estar cerrado para la producción</value>
+  </data>
 </root>
