--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -2860,7 +2860,7 @@
     <value>Disconnettore Locale Chiuso</value>
   </data>
   <data name="ROTATION STOPPED" xml:space="preserve">
-    <value>Rotazione Interrotta</value>
+    <value>Rotazione Ferma</value>
   </data>
   <data name="POWER SWITCH OPEN" xml:space="preserve">
     <value>Disconnettore di potenza Aperto</value>
@@ -9800,5 +9800,8 @@
   </data>
   <data name="WCE WATER CLEANING" xml:space="preserve">
     <value>WCE pulizia dell'acqua</value>
+  </data>
+  <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
+    <value>Chiudere l'interruttore per consentire la produzione</value>
   </data>
 </root>
