--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -9801,4 +9801,7 @@
   <data name="WCE WATER CLEANING" xml:space="preserve">
     <value>Limpeza de água WCE</value>
   </data>
+  <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
+    <value>O disjuntor elétrico deve ser fechado para produção</value>
+  </data>
 </root>
