--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -9801,4 +9801,7 @@
   <data name="WCE WATER CLEANING" xml:space="preserve">
     <value>تنظيف المياه WCE</value>
   </data>
+  <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
+    <value>يجب إغلاق قاطع الدائرة الكهربائية قبل الإنتاج</value>
+  </data>
 </root>
