--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -10164,4 +10164,8 @@
   <data name="WCE WATER CLEANING" xml:space="preserve">
     <value>WCE Water Cleaning</value>
   </data>
+  <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
+    <value>Electrical Circuit Breaker Must Be Closed For Production</value>
+    <comment>InfoText Message</comment>
+  </data>
 </root>
