--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -9801,4 +9801,7 @@
   <data name="WCE WATER CLEANING" xml:space="preserve">
     <value>Curăţarea apei WCE</value>
   </data>
+  <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
+    <value>Întrerupătorul electric trebuie să fie închis pentru producție</value>
+  </data>
 </root>
