--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -9801,4 +9801,7 @@
   <data name="WCE WATER CLEANING" xml:space="preserve">
     <value>WCE水净化</value>
   </data>
+  <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
+    <value>生产时必须关闭断路器</value>
+  </data>
 </root>
