PV_Localization : added 2 texts x Msgs and Flts

--- a/Prevu.Localization/Properties/Resources.nl.resx
+++ b/Prevu.Localization/Properties/Resources.nl.resx
@@ -9804,4 +9804,10 @@
   <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
     <value>De elektrische stroomonderbreker moet gesloten zijn voor productie</value>
   </data>
+  <data name="M_INFO_NETWORK_COMM_DISABLED" xml:space="preserve">
+    <value>Netwerkcommunicatie uitgeschakeld: alle signalen van externe partners worden omzeild! Herstel de communicatie zo snel mogelijk.</value>
+  </data>
+  <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
+    <value>Controleer de Profinet-kabel, connectoren, voeding van de communicatiemodule en externe partnervoorwaarden</value>
+  </data>
 </root>
