--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -9804,4 +9804,10 @@
   <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
     <value>生产时必须关闭断路器</value>
   </data>
+  <data name="M_INFO_NETWORK_COMM_DISABLED" xml:space="preserve">
+    <value>网络通讯禁用：所有来自外部合作伙伴的信号都被绕过！尽快恢复通讯。</value>
+  </data>
+  <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
+    <value>检查 Profinet 电缆、连接器、通信模块电源和外部合作伙伴状况</value>
+  </data>
 </root>
