--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -9804,4 +9804,10 @@
   <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
     <value>Der elektrische Leistungsschalter muss für die Produktion geschlossen sein</value>
   </data>
+  <data name="M_INFO_NETWORK_COMM_DISABLED" xml:space="preserve">
+    <value>Netzwerkkommunikation deaktiviert: Alle von externen Partnern kommenden Signale werden umgangen! Stellen Sie die Kommunikation so schnell wie möglich wieder her.</value>
+  </data>
+  <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
+    <value>Überprüfen Sie das Profinet-Kabel, die Anschlüsse, die Stromversorgung des Kommunikationsmoduls und die Bedingungen des externen Partners</value>
+  </data>
 </root>
