--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -9804,4 +9804,10 @@
   <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
     <value>El disyuntor eléctrico debe estar cerrado para la producción</value>
   </data>
+  <data name="M_INFO_NETWORK_COMM_DISABLED" xml:space="preserve">
+    <value>Comunicación de red deshabilitada: ¡se omiten todas las señales provenientes de socios externos! Restablezca la comunicación lo antes posible.</value>
+  </data>
+  <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
+    <value>Verifique el cable Profinet, los conectores, la fuente de alimentación del módulo de comunicación y las condiciones del socio externo</value>
+  </data>
 </root>
