--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -9804,4 +9804,10 @@
   <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
     <value>מפסק חשמל חייב להיות סגור לייצור</value>
   </data>
+  <data name="M_INFO_NETWORK_COMM_DISABLED" xml:space="preserve">
+    <value>תקשורת רשת מושבתת: כל האותות המגיעים משותפים חיצוניים עוקפים! שחזר תקשורת בהקדם האפשרי.</value>
+  </data>
+  <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
+    <value>בדוק את כבל Profinet, מחברים, אספקת חשמל של מודול תקשורת ותנאי שותף חיצוני</value>
+  </data>
 </root>
