--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -9804,4 +9804,10 @@
   <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
     <value>Chiudere l'interruttore per consentire la produzione</value>
   </data>
+  <data name="M_INFO_NETWORK_COMM_DISABLED" xml:space="preserve">
+    <value>Comunicazione di rete disabilitata: tutti i segnali provenienti dai partner esterni vengono bypassati! Ripristinare la comunicazione il prima possibile.</value>
+  </data>
+  <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
+    <value>Controllare le condizioni del cavo Profinet, dei connettori, dell'alimentazione del modulo di comunicazione e del partner esterno</value>
+  </data>
 </root>
