--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -9804,4 +9804,10 @@
   <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
     <value>O disjuntor elétrico deve ser fechado para produção</value>
   </data>
+  <data name="M_INFO_NETWORK_COMM_DISABLED" xml:space="preserve">
+    <value>Comunicação de rede desativada: todos os sinais provenientes de parceiros externos são ignorados! Restaure a comunicação o mais rápido possível.</value>
+  </data>
+  <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
+    <value>Verifique o cabo Profinet, os conectores, a fonte de alimentação do módulo de comunicação e as condições do parceiro externo</value>
+  </data>
 </root>
