--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -10168,4 +10168,12 @@
     <value>Electrical Circuit Breaker Must Be Closed For Production</value>
     <comment>InfoText Message</comment>
   </data>
+  <data name="M_INFO_NETWORK_COMM_DISABLED" xml:space="preserve">
+    <value>Network Communication Disabled: All The Signals coming From External Partners Are Bypassed ! Restore Communication As Soon As Possible.</value>
+    <comment>InfoText Message</comment>
+  </data>
+  <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
+    <value>Check Profinet Cable, Connectors, Communication Module Power Supply And External Parner Conditions</value>
+    <comment>InfoText Fault</comment>
+  </data>
 </root>
