--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -9804,4 +9804,10 @@
   <data name="M_INFO_BREAKER_OPEN" xml:space="preserve">
     <value>Întrerupătorul electric trebuie să fie închis pentru producție</value>
   </data>
+  <data name="M_INFO_NETWORK_COMM_DISABLED" xml:space="preserve">
+    <value>Comunicarea în rețea dezactivată: Toate semnalele care provin de la partenerii externi sunt ocolite! Restabiliți comunicarea cât mai curând posibil.</value>
+  </data>
+  <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
+    <value>Verificați cablul Profinet, conectorii, sursa de alimentare a modulului de comunicație și condițiile partenerilor externi</value>
+  </data>
 </root>
