PV Localization - Added New Texts

--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -9810,4 +9810,7 @@
   <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
     <value>تحقق من كابل Profinet والموصلات ووحدة إمداد الطاقة بوحدة الاتصال وظروف الشريك الخارجي</value>
   </data>
+  <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
+    <value>انهيار اتصالات الشبكة مع الشريك الخارجي</value>
+  </data>
 </root>
