--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -9810,4 +9810,7 @@
   <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
     <value>Verifique o cabo Profinet, os conectores, a fonte de alimentação do módulo de comunicação e as condições do parceiro externo</value>
   </data>
+  <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
+    <value>Análise da comunicação de rede com parceiro externo</value>
+  </data>
 </root>
