--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -10176,4 +10176,7 @@
     <value>Check Profinet Cable, Connectors, Communication Module Power Supply And External Parner Conditions</value>
     <comment>InfoText Fault</comment>
   </data>
+  <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
+    <value>Network Communication Breakdown With External Partner</value>
+  </data>
 </root>
