--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -9810,4 +9810,7 @@
   <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
     <value>Verificați cablul Profinet, conectorii, sursa de alimentare a modulului de comunicație și condițiile partenerilor externi</value>
   </data>
+  <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
+    <value>Defecțiunea comunicării în rețea cu partenerul extern</value>
+  </data>
 </root>
