--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -9810,4 +9810,7 @@
   <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
     <value>Überprüfen Sie das Profinet-Kabel, die Anschlüsse, die Stromversorgung des Kommunikationsmoduls und die Bedingungen des externen Partners</value>
   </data>
+  <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
+    <value>Ausfall der Netzwerkkommunikation mit externem Partner</value>
+  </data>
 </root>
