--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -9810,4 +9810,7 @@
   <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
     <value>Verifique el cable Profinet, los conectores, la fuente de alimentación del módulo de comunicación y las condiciones del socio externo</value>
   </data>
+  <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
+    <value>Fallo de comunicación de red con socio externo</value>
+  </data>
 </root>
