--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -9810,4 +9810,7 @@
   <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
     <value>בדוק את כבל Profinet, מחברים, אספקת חשמל של מודול תקשורת ותנאי שותף חיצוני</value>
   </data>
+  <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
+    <value>תקלה בתקשורת ברשת עם שותף חיצוני</value>
+  </data>
 </root>
