--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -2803,7 +2803,7 @@
     <value>A Valle vicino Ok Per Inizio Lavaggio</value>
   </data>
   <data name="NEAR DOWNSTREAM NOT OK FOR SHREDDING" xml:space="preserve">
-    <value>A Valle vicino Non Adatto Per La Triturazione</value>
+    <value>A Valle vicino Non OK per l'avvio del Prerompitore</value>
   </data>
   <data name="FAR DOWNSTREAM OK FOR START WASHING" xml:space="preserve">
     <value>A Valle lontano Ok Per Iniziare il Lavaggio</value>
@@ -4942,7 +4942,7 @@
     <value>Mulino - Chiave di sicurezza</value>
   </data>
   <data name="NEAR DOWNSTREAM OK FOR START SHREDDING" xml:space="preserve">
-    <value>A valle vicino OK per l'avvio del trituratore</value>
+    <value>A valle vicino OK per l'avvio del Prerompitore</value>
   </data>
   <data name="FAR DOWNSTREAM OK FOR START SHREDDING" xml:space="preserve">
     <value>A valle lontano OK per l'avvio del trituratore</value>
@@ -9809,5 +9809,8 @@
   </data>
   <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
     <value>Controllare le condizioni del cavo Profinet, dei connettori, dell'alimentazione del modulo di comunicazione e del partner esterno</value>
+  </data>
+  <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
+    <value>Interruzione della comunicazione di rete con il partner esterno</value>
   </data>
 </root>
