--- a/Prevu.Localization/Properties/Resources.nl.resx
+++ b/Prevu.Localization/Properties/Resources.nl.resx
@@ -9810,4 +9810,7 @@
   <data name="INFO_NETWORK_COMM_1" xml:space="preserve">
     <value>Controleer de Profinet-kabel, connectoren, voeding van de communicatiemodule en externe partnervoorwaarden</value>
   </data>
+  <data name="NETWORK COMMUNICATION BREAKDOWN WITH EXTERNAL PARTNER" xml:space="preserve">
+    <value>Netwerkcommunicatiestoring met externe partner</value>
+  </data>
 </root>
